# VideoFS

./: .gitignore  README.md  meson.build
resources/: sample.mkv
scripts/: format.sh
src/: README.md  byteblock_3bpc.c  byteblock_3bpc.h  config.cpp  config.hpp  decoder.cpp  decoder_test.cpp  encoder.cpp  encoder_test.cpp  interconverter_3bpc.cpp  interconverter_3bpc.hpp  log.c  log.cpp  log.h  log.hpp  main.c  util.c  util.cpp  util.h  util.hpp
src/FrameEncoder/: FrameEncoder3BPC.cpp  FrameEncoder3BPC.hpp  FrameEncoderBase.hpp  interconverter_3bpc.hpp
src/codec/: FrameGenerator.hpp  InterConverter.cpp  InterConverter.hpp  InterConverter3BPC.cpp  InterConverter3BPC.hpp  VideoWriter.cpp  VideoWriter.hpp  VideoWriter3BPC.cpp  VideoWriter3BPC.hpp
